k8s/backend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: task-manager-backend-service
  namespace: task-manager

spec:
  type: NodePort

  selector:
    app: task-manager-backend

  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 30051
